refactored create update and get bucket
